# pycheron

./: .gitignore  Dockerfile_GPU  Dockerfile_GPU_run_w_cuDF  Dockerfile_GPU_run_w_cuPY  Dockerfile_newer_python_and_libs  Dockerfile_original  build.sh  pyproject.toml
pycheron/: callPycheronMetric.py
pycheron/UI/: createDashUI.py
pycheron/sigpro/qcStatisticsML/: train_evaluate_model.py
