[tool.poetry]
name = "pycheron"
version = "3.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
include = ["psd/*", "rollseis/*", "metrics/*"]

[tool.poetry.dependencies]
cmdline-ispaq = {git = "https://github.com/iris-edu/ispaq.git", branch = "master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.black]
line-length = 120
